--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,11 +7,25 @@
     "dev-both": "concurrently \"nodemon authentication\\index.js \" \"nodemon cart-crud\\index.js \" \" nodemon coupons-crud\\index.js\" \"  nodemon products-crud\\index.js \"   \"  nodemon user-crud\\index.js \" \"  nodemon wishlist-crud\\index.js\" \"  nodemon api-gateway\\adminGateway\\index.js \"    \"  nodemon api-gateway\\appGateway\\index.js \" \"  nodemon api-gateway\\userGateway\\index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  
   "author": "",
   "license": "ISC",
- 
   "dependencies": {
-    "concurrently": "^7.2.2"
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^7.2.2",
+    "cookie-parser": "^1.4.6",
+    "cord": "^1.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "fast-gateway": "^3.3.4",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.2",
+    "nodemon": "^2.0.19",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui": "^4.12.0",
+    "swagger-ui-express": "^4.4.0",
+    "yamljs": "^0.3.0"
   }
 }
